include/rtdef.h


typedef int                             rt_bool_t;      
typedef signed long                     rt_base_t;      
typedef unsigned long                   rt_ubase_t;     
typedef int32_t                         rt_int32_t;     
typedef uint8_t                         rt_uint8_t;     
typedef uint16_t                        rt_uint16_t;    
typedef uint32_t                        rt_uint32_t;    
typedef uint64_t                        rt_uint64_t;    
typedef signed   int                    rt_int32_t;     
typedef unsigned char                   rt_uint8_t;     
typedef unsigned short                  rt_uint16_t;    
typedef unsigned int                    rt_uint32_t;    
typedef unsigned long                   rt_uint64_t;    
typedef unsigned long long              rt_uint64_t;    
typedef size_t                          rt_size_t;      
typedef rt_ubase_t                      rt_size_t;      
typedef rt_uint32_t                     rt_tick_t;      
    typedef rt_base_t rt_atomic_t;
    typedef atomic_size_t rt_atomic_t;
        typedef atomic_size_t rt_atomic_t;
        typedef rt_base_t rt_atomic_t;
typedef struct rt_list_node rt_list_t;                  
struct rt_object
{
#if RT_NAME_MAX > 0
    char        name[RT_NAME_MAX];                       
#else
    const char *name;                                    
#endif 
    rt_uint8_t  type;                                    
    rt_uint8_t  flag;                                    
#ifdef RT_USING_MODULE
    void      * module_id;                               
#endif 
#ifdef RT_USING_SMART
    int         lwp_ref_count;                           
#endif 
    rt_list_t   list;                                    
};
typedef struct rt_object *rt_object_t;                   
enum rt_object_class_type
{
    RT_Object_Class_Null          = 0x00,      
    RT_Object_Class_Thread        = 0x01,      
    RT_Object_Class_Semaphore     = 0x02,      
    RT_Object_Class_Mutex         = 0x03,      
    RT_Object_Class_Event         = 0x04,      
    RT_Object_Class_MailBox       = 0x05,      
    RT_Object_Class_MessageQueue  = 0x06,      
    RT_Object_Class_MemHeap       = 0x07,      
    RT_Object_Class_MemPool       = 0x08,      
    RT_Object_Class_Device        = 0x09,      
    RT_Object_Class_Timer         = 0x0a,      
    RT_Object_Class_Module        = 0x0b,      
    RT_Object_Class_Memory        = 0x0c,      
    RT_Object_Class_Channel       = 0x0d,      
    RT_Object_Class_Custom        = 0x0e,      
    RT_Object_Class_Unknown       = 0x0f,      
    RT_Object_Class_Static        = 0x80       
};
struct rt_object_information
{
    enum rt_object_class_type type;                     
    rt_list_t                 object_list;              
    rt_size_t                 object_size;              
};
struct rt_timer
{
    struct rt_object parent;                            
    rt_list_t        row[RT_TIMER_SKIP_LIST_LEVEL];
    void (*timeout_func)(void *parameter);              
    void            *parameter;                         
    rt_tick_t        init_tick;                         
    rt_tick_t        timeout_tick;                      
};
typedef struct rt_timer *rt_timer_t;
typedef unsigned long rt_sigset_t;
typedef void (*rt_sighandler_t)(int signo);
struct rt_thread;
struct rt_wakeup
{
    rt_wakeup_func_t func;
    void *user_data;
};
typedef void (*lwp_sighandler_t)(int);
struct lwp_thread_signal {
    lwp_sigset_t sigset_mask;
    struct lwp_sigqueue sig_queue;
};
struct rt_user_context
{
    void *sp;
    void *pc;
    void *flag;
    void *ctx;
};
typedef void (*rt_thread_cleanup_t)(struct rt_thread *tid);
struct rt_thread
{
    struct rt_object            parent;
    rt_list_t                   tlist;                  
    void                        *sp;                    
    void                        *entry;                 
    void                        *parameter;             
    rt_thread_cleanup_t         cleanup;                
    void                        *stack_addr;            
    rt_uint32_t                 stack_size;             
    rt_uint16_t                  stat;                   
    rt_uint8_t                  current_priority;       
    rt_uint8_t                  init_priority;          
#if RT_THREAD_PRIORITY_MAX > 32
    rt_uint8_t                  number;
    rt_uint8_t                  high_mask;
#endif 
    rt_uint32_t                 number_mask;            
    rt_tick_t                   init_tick;              
    rt_tick_t                   remaining_tick;         
    struct rt_timer             thread_timer;           
    rt_err_t                    error;                    
#ifdef RT_USING_SMP
    rt_uint8_t                  bind_cpu;               
    rt_uint8_t                  oncpu;                  
    rt_uint16_t                 critical_lock_nest;     
#endif 
#ifdef RT_USING_MUTEX
    rt_list_t                   taken_object_list;
    rt_object_t                 pending_object;
#endif
#ifdef RT_USING_EVENT
    rt_uint32_t                 event_set;
    rt_uint8_t                  event_info;
#endif 
#ifdef RT_USING_SIGNALS
    rt_sigset_t                 sig_pending;            
    rt_sigset_t                 sig_mask;               
#ifndef RT_USING_SMP
    void                        *sig_ret;               
#endif 
    rt_sighandler_t             *sig_vectors;           
    void                        *si_list;               
#endif 
#ifdef RT_USING_CPU_USAGE
    rt_uint64_t                 duration_tick;          
#endif 
#ifdef RT_USING_PTHREADS
    void                        *pthread_data;          
#endif 
#ifdef RT_USING_SMART
    void                        *msg_ret;               
    void                        *lwp;                   
    void                        *user_entry;
    void                        *user_stack;
    rt_uint32_t                 user_stack_size;
    rt_uint32_t                 *kernel_sp;             
    rt_list_t                   sibling;                
    struct lwp_thread_signal    signal;                 
    struct rt_user_context      user_ctx;               
    struct rt_wakeup            wakeup;                 
    int                         exit_request;
    int                         tid;
#ifndef ARCH_MM_MMU
    lwp_sighandler_t            signal_handler[32];
#else
    int                         step_exec;
    int                         debug_attach_req;
    int                         debug_ret_user;
    int                         debug_suspend;
    struct rt_hw_exp_stack      *regs;
    void                        *thread_idr;            
    int                         *clear_child_tid;
#endif 
#endif 
};
typedef struct rt_thread *rt_thread_t;