blue/bsp/src/bindings.rs

extern "C" {
    pub fn rt_hw_atomic_flag_clear(ptr: *mut rt_atomic_t);
}
extern "C" {
    pub fn rt_hw_atomic_flag_test_and_set(ptr: *mut rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_compare_exchange_strong(
        ptr: *mut rt_atomic_t,
        expected: *mut rt_atomic_t,
        desired: rt_atomic_t,
    ) -> rt_atomic_t;
}
pub type syscall_func = ::core::option::Option<unsafe extern "C" fn() -> core::ffi::c_long>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct finsh_syscall {
    pub name: *const core::ffi::c_char,
    pub desc: *const core::ffi::c_char,
    pub opt: *mut msh_cmd_opt,
    pub func: syscall_func,
}
#[test]
fn bindgen_test_layout_finsh_syscall() {
    const UNINIT: ::core::mem::MaybeUninit<finsh_syscall> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<finsh_syscall>(),
        16usize,
        concat!("Size of: ", stringify!(finsh_syscall))
    );
    assert_eq!(
        ::core::mem::align_of::<finsh_syscall>(),
        4usize,
        concat!("Alignment of ", stringify!(finsh_syscall))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).desc) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall),
            "::",
            stringify!(desc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).opt) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall),
            "::",
            stringify!(opt)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).func) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall),
            "::",
            stringify!(func)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct finsh_syscall_item {
    pub next: *mut finsh_syscall_item,
    pub syscall: finsh_syscall,
}
#[test]
fn bindgen_test_layout_finsh_syscall_item() {
    const UNINIT: ::core::mem::MaybeUninit<finsh_syscall_item> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<finsh_syscall_item>(),
        20usize,
        concat!("Size of: ", stringify!(finsh_syscall_item))
    );
    assert_eq!(
        ::core::mem::align_of::<finsh_syscall_item>(),
        4usize,
        concat!("Alignment of ", stringify!(finsh_syscall_item))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall_item),
            "::",
            stringify!(next)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).syscall) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall_item),
            "::",
            stringify!(syscall)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct msh_cmd_opt {
    pub id: rt_uint32_t,
    pub name: *const core::ffi::c_char,
    pub des: *const core::ffi::c_char,
}
#[test]
fn bindgen_test_layout_msh_cmd_opt() {
    const UNINIT: ::core::mem::MaybeUninit<msh_cmd_opt> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<msh_cmd_opt>(),
        12usize,
        concat!("Size of: ", stringify!(msh_cmd_opt))
    );
    assert_eq!(
        ::core::mem::align_of::<msh_cmd_opt>(),
        4usize,
        concat!("Alignment of ", stringify!(msh_cmd_opt))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(msh_cmd_opt),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(msh_cmd_opt),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).des) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(msh_cmd_opt),
            "::",
            stringify!(des)
        )
    );
}
pub type msh_cmd_opt_t = msh_cmd_opt;
extern "C" {
    pub fn msh_opt_list_dump(options: *mut core::ffi::c_void);
}
extern "C" {
    pub fn msh_cmd_opt_id_get(
        argc: core::ffi::c_int,
        argv: *mut *mut core::ffi::c_char,
        options: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub static mut global_syscall_list: *mut finsh_syscall_item;
}
extern "C" {
    pub static mut _syscall_table_begin: *mut finsh_syscall;
}
extern "C" {
    pub static mut _syscall_table_end: *mut finsh_syscall;
}
extern "C" {
    pub fn finsh_syscall_lookup(name: *const core::ffi::c_char) -> *mut finsh_syscall;
}
extern "C" {
    pub fn finsh_set_device(device_name: *const core::ffi::c_char);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_object_information {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " @addtogroup KernelObject\n @{"]
    pub fn rt_object_get_information(type_: rt_object_class_type) -> *mut rt_object_information;
}
extern "C" {
    pub fn rt_object_get_length(type_: rt_object_class_type) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_object_get_pointers(
        type_: rt_object_class_type,
        pointers: *mut rt_object_t,
        maxlen: rt_size_t,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_object_init(
        object: *mut rt_object,
        type_: rt_object_class_type,
        name: *const core::ffi::c_char,
    );
}
extern "C" {
    pub fn rt_object_detach(object: rt_object_t);
}
extern "C" {
    pub fn rt_object_allocate(
        type_: rt_object_class_type,
        name: *const core::ffi::c_char,
    ) -> rt_object_t;
}
extern "C" {
    pub fn rt_object_delete(object: rt_object_t);
}
extern "C" {
    pub fn rt_custom_object_create(
        name: *const core::ffi::c_char,
        data: *mut core::ffi::c_void,
        data_destroy: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut core::ffi::c_void) -> rt_err_t,
        >,
    ) -> rt_object_t;
}
extern "C" {
    pub fn rt_custom_object_destroy(obj: rt_object_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_object_is_systemobject(object: rt_object_t) -> rt_bool_t;
}
extern "C" {
    pub fn rt_object_get_type(object: rt_object_t) -> rt_uint8_t;
}
extern "C" {
    pub fn rt_object_find(name: *const core::ffi::c_char, type_: rt_uint8_t) -> rt_object_t;
}
extern "C" {
    pub fn rt_object_get_name(
        object: rt_object_t,
        name: *mut core::ffi::c_char,
        name_size: rt_uint8_t,
    ) -> rt_err_t;
}
extern "C" {
    #[doc = " @addtogroup Clock\n @{"]
    pub fn rt_tick_get() -> rt_tick_t;
}
extern "C" {
    pub fn rt_tick_set(tick: rt_tick_t);
}
extern "C" {
    pub fn rt_tick_increase();
}
extern "C" {
    pub fn rt_tick_from_millisecond(ms: rt_int32_t) -> rt_tick_t;
}
extern "C" {
    pub fn rt_tick_get_millisecond() -> rt_tick_t;
}
extern "C" {
    pub fn rt_system_timer_init();
}
extern "C" {
    pub fn rt_system_timer_thread_init();
}
extern "C" {
    pub fn rt_timer_init(
        timer: rt_timer_t,
        name: *const core::ffi::c_char,
        timeout: ::core::option::Option<unsafe extern "C" fn(parameter: *mut core::ffi::c_void)>,
        parameter: *mut core::ffi::c_void,
        time: rt_tick_t,
        flag: rt_uint8_t,
    );
}
extern "C" {
    pub fn rt_timer_detach(timer: rt_timer_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_timer_create(
        name: *const core::ffi::c_char,
        timeout: ::core::option::Option<unsafe extern "C" fn(parameter: *mut core::ffi::c_void)>,
        parameter: *mut core::ffi::c_void,
        time: rt_tick_t,
        flag: rt_uint8_t,
    ) -> rt_timer_t;
}
extern "C" {
    pub fn rt_timer_delete(timer: rt_timer_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_timer_start(timer: rt_timer_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_timer_stop(timer: rt_timer_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_timer_control(
        timer: rt_timer_t,
        cmd: core::ffi::c_int,
        arg: *mut core::ffi::c_void,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_timer_next_timeout_tick() -> rt_tick_t;
}
extern "C" {
    pub fn rt_timer_check();
}
extern "C" {
    #[doc = " @addtogroup Thread\n @{"]
    pub fn rt_thread_init(
        thread: *mut rt_thread,
        name: *const core::ffi::c_char,
        entry: ::core::option::Option<unsafe extern "C" fn(parameter: *mut core::ffi::c_void)>,
        parameter: *mut core::ffi::c_void,
        stack_start: *mut core::ffi::c_void,
        stack_size: rt_uint32_t,
        priority: rt_uint8_t,
        tick: rt_uint32_t,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_detach(thread: rt_thread_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_create(
        name: *const core::ffi::c_char,
        entry: ::core::option::Option<unsafe extern "C" fn(parameter: *mut core::ffi::c_void)>,
        parameter: *mut core::ffi::c_void,
        stack_size: rt_uint32_t,
        priority: rt_uint8_t,
        tick: rt_uint32_t,
    ) -> rt_thread_t;
}
extern "C" {
    pub fn rt_thread_delete(thread: rt_thread_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_self() -> rt_thread_t;
}
extern "C" {
    pub fn rt_thread_find(name: *mut core::ffi::c_char) -> rt_thread_t;
}
extern "C" {
    pub fn rt_thread_startup(thread: rt_thread_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_yield() -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_delay(tick: rt_tick_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_mdelay(ms: rt_int32_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_control(
        thread: rt_thread_t,
        cmd: core::ffi::c_int,
        arg: *mut core::ffi::c_void,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_suspend(thread: rt_thread_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_suspend_with_flag(thread: rt_thread_t, suspend_flag: rt_uint32_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_resume(thread: rt_thread_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_timeout(parameter: *mut core::ffi::c_void);
}
extern "C" {
    pub fn rt_thread_get_name(
        thread: rt_thread_t,
        name: *mut core::ffi::c_char,
        name_size: rt_uint8_t,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_idle_init();
}
extern "C" {
    pub fn rt_thread_idle_sethook(hook: ::core::option::Option<unsafe extern "C" fn()>)
        -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_idle_delhook(hook: ::core::option::Option<unsafe extern "C" fn()>)
        -> rt_err_t;
}
extern "C" {
    pub fn rt_thread_idle_gethandler() -> rt_thread_t;
}
extern "C" {
    pub fn rt_system_scheduler_init();
}
extern "C" {
    pub fn rt_system_scheduler_start();
}
extern "C" {
    pub fn rt_schedule();
}
extern "C" {
    pub fn rt_schedule_insert_thread(thread: *mut rt_thread);
}
extern "C" {
    pub fn rt_schedule_remove_thread(thread: *mut rt_thread);
}
extern "C" {
    pub fn rt_enter_critical();
}
extern "C" {
    pub fn rt_exit_critical();
}
extern "C" {
    pub fn rt_critical_level() -> rt_uint16_t;
}
extern "C" {
    pub fn rt_system_heap_init(
        begin_addr: *mut core::ffi::c_void,
        end_addr: *mut core::ffi::c_void,
    );
}
extern "C" {
    pub fn rt_malloc(size: rt_size_t) -> *mut core::ffi::c_void;
}
